--- a/src/components/Box/Box.css
+++ b/src/components/Box/Box.css
@@ -70,4 +70,10 @@
     width: 1.5rem;
     top: 0;
   }
+
+  &.disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+    background-color: rgba(0 0 0 / 0.5);
+  }
 }
